--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -4,6 +4,16 @@
     overflow: scroll;
 }
 
+#galleryContainer {
+    width: auto;
+    max-width: 500px;
+    background-color:bisque;
+    border-style:solid;
+    border-radius: 34px;
+    border-width: 4px;
+    border-color: #0000004F;
+}
+
 body {
     background-color: lightblue;
 }
@@ -11,4 +21,25 @@ body {
 h1 {
     color: navy;
     margin-left: 20px;
+}
+
+/* Swipper */
+.swiper {
+    width: 100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.swiper-slide {
+    background-position: center;
+    background-size: cover;
+    max-width: 70%;
+    margin: auto;
+}
+
+.swiper-slide img {
+    position: center;
+    display: block;
+    width: 100%;
+    height: 100%;
 }
