--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -6,7 +6,14 @@
 
 #galleryContainer {
     width: auto;
-    max-width: 500px;
+    display: inline-block;
+}
+
+.galleryContent {
+  background: #FBFBFB;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 body {
@@ -71,11 +78,12 @@ h1 {
     background-size: cover;
     max-width: 70%;
     margin: auto;
+    max-width: 300px;
 }
 
 .swiper-slide img {
     position: center;
-    display: block;
+    display: inline-block;
     width: 100%;
     height: 100%;
     transition: 0.3s;
