--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -29,14 +29,14 @@ h1 {
 
 /* Global item constraints */
 .page {
-  background-color: #F9F9F9;
+  background-color: #FBFBFB;
   max-width: 1024px;
   margin: auto;
 }
 
 /* Page 1 */
 .Coverimage {
-  background: linear-gradient(#D9D9D900 0%, #D9D9D900 50%, #D9D9D9FF 70%, white 100%), url("../../resources/image/Cover_0.jpg") no-repeat center center;
+  background: linear-gradient(#D9D9D900 0%, #D9D9D900 50%, #D9D9D9FF 70%, #FBFBFBFF 100%), url("../../resources/image/Cover_0.jpg") no-repeat center center;
   background-size: cover;
   background-position: 50% 20%;
   height: 100vh;
