--- a/css/style_main.css
+++ b/css/style_main.css
@@ -69,9 +69,20 @@
   flex-direction: column;
 }
 
+.content-box > p {
+	position: relative;
+	text-align: center;
+	color: black;
+	font-size: 15px;
+	font-family: Noto Serif KR;
+	font-weight: 400;
+	line-height: 30px;
+	word-wrap: break-word;
+}
+
 .rect {
 	width: 80%;
-	min-height: 400px;
+	min-height: 450px;
 	margin: auto;
 	position: relative;
 	background: white;
@@ -114,22 +125,14 @@
 	word-wrap: break-word;
 	margin: 0 0 5% 0;
 }
-
-.page > p {
-	position: relative;
-	text-align: center;
-	color: black;
-	font-size: 15px;
+small {
+  font-size: 12px;
 	font-family: Noto Serif KR;
 	font-weight: 400;
-	line-height: 30px;
 	word-wrap: break-word;
 }
-
 span {
-	small {
-		font-size: 12px;
-	}
+
 	color: black;
 	font-size: 15px;
 	font-family: Noto Serif KR;
@@ -196,13 +199,13 @@ span {
     font-weight: 400;
     word-wrap: break-word;
   }
-
   .HighlightNumber {
     position: relative;
     background: #0F0F3F;
     border-radius: 9999px;
     text-align: center;
-    padding: 10px;
+    width: 35px;
+    height: 35px;
 
     color: white;
     font-size: 15px;
@@ -210,7 +213,6 @@ span {
     font-weight: 400;
     word-wrap: break-word;
   }
-
   .HiddenNumber {
     text-align: center;
     color: rgba(96.90, 96.90, 96.90, 0.25);
