--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,9 +1,3 @@
-#imageContainer {
-    max-width: 100px;
-    max-height: 100px;
-    overflow: scroll;
-}
-
 #galleryContainer {
     width: auto;
     display: inline-block;
@@ -64,6 +58,27 @@ h1 {
   overflow-y: hidden;
 }
 
+/* More gallery */
+
+.moreImageContainer {
+  max-height: 300vh;
+
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content:flex-start;
+  gap: 10px;
+}
+
+.moreImageContainer img {
+  object-fit: contain;
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
+  border-color: #D9D9D9;
+  border-radius: 10%;
+}
+
 /* Swipper */
 .swiper {
     width: 100%;
@@ -84,6 +99,7 @@ h1 {
     display: inline-block;
     width: 100%;
     height: 100%;
+    border-radius: 10%;
     transition: 0.3s;
 }
 
