--- a/css/style_main.css
+++ b/css/style_main.css
@@ -55,21 +55,52 @@
 }
 
 .page {
+  width: 100%;
+	height: 100%;
+	min-height: 800px;
+	background: #FBFBFB;
+	overflow: hidden;
+
+  h1 {
+  	position: relative;
+  	text-align: center;
+  	color: black;
+  	font-size: 20px;
+  	font-family: Noto Serif KR;
+  	font-weight: 400;
+  	line-height: 30px;
+  	word-wrap: break-word;
+  	margin: 10% 0 10% 0;
+  }
+}
+
+.content-page {
 	width: 100%;
 	height: 100%;
 	min-height: 800px;
 	background: #FBFBFB;
 	overflow: hidden;
-}
 
-.content-box{
   align-items: center;
   display: flex;
 	justify-content: center;
   flex-direction: column;
+
+
+  h1 {
+  	position: relative;
+  	text-align: center;
+  	color: black;
+  	font-size: 20px;
+  	font-family: Noto Serif KR;
+  	font-weight: 400;
+  	line-height: 30px;
+  	word-wrap: break-word;
+  	margin: 0 0 5% 0;
+  }
 }
 
-.content-box > p {
+.content-page > p {
 	position: relative;
 	text-align: center;
 	color: black;
@@ -95,6 +126,14 @@
 }
 
 .icon-button {
+
+	width: 57px;
+	height: 57px;
+	padding: 0px 5px 0px 5px;
+	justify-content: flex-start;
+	align-items: center;
+	display: inline-flex;
+
 	.icon-image {
 		width: 40px;
 		height: 40px;
@@ -106,25 +145,12 @@
 
 		overflow: hidden;
 	}
-	width: 57px;
-	height: 57px;
-	padding: 0px 5px 0px 5px;
-	justify-content: flex-start;
-	align-items: center;
-	display: inline-flex;
 }
 
-.page > h1 {
-	position: relative;
-	text-align: center;
-	color: black;
-	font-size: 20px;
-	font-family: Noto Serif KR;
-	font-weight: 400;
-	line-height: 30px;
-	word-wrap: break-word;
-	margin: 0 0 5% 0;
+.icon-button:hover .icon-image{
+  opacity: 0.5;
 }
+
 small {
   font-size: 12px;
 	font-family: Noto Serif KR;
@@ -250,7 +276,7 @@ span {
   align-items: center;
   justify-content: space-between;
   display: inline-flex;
-  gap: 20px;
+  gap: 10px;
   margin: 15px;
 }
 .Account > .Line {
