--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -75,8 +75,6 @@ h1 {
   max-width: 100%;
   height: auto;
   vertical-align: middle;
-  border-color: #D9D9D9;
-  border-radius: 10%;
 }
 
 /* Swipper */
@@ -99,7 +97,8 @@ h1 {
     display: inline-block;
     width: 100%;
     height: 100%;
-    border-radius: 10%;
+    border-radius: 30px;
+    box-shadow: 0px 4px 8px 4px rgba(0, 0, 0, 0.25);
     transition: 0.3s;
 }
 
