--- a/css/style_main.css
+++ b/css/style_main.css
@@ -166,15 +166,17 @@ span {
 	word-wrap: break-word;
 }
 
-.page > .how-to-come{
+.content-page > .howToCome{
 	p {
+    span {
+      line-height: 1.5em;
+    }
 		align-self: stretch;
-		padding: 10px;
 		flex-direction: column;
 		justify-content: flex-start;
 		align-items: flex-start;
-		gap: 10px;
 		display: flex;
+    margin: 0.75em 0 0.75em 0;
 	}
 	padding-left: 10px;
 	padding-right: 10px;
@@ -182,7 +184,7 @@ span {
 	flex-direction: column;
 	justify-content: center;
 	align-items: flex-start;
-	gap:11px;
+	gap:0.5vh;
 	display: inline-flex;
 }
 
