Fix introducePerson layout
Signed-off-by: Eunki Hong <h.pichulia@gmail.com>

--- a/css/style_main.css
+++ b/css/style_main.css
@@ -195,7 +195,7 @@ span {
 }
 
 
-.page > .introducePerson {
+.content-page > .introducePerson {
 	position: relative;
 	flex-direction: column;
 	justify-content: center;
