--- a/styles/style_sub.css
+++ b/styles/style_sub.css
@@ -29,7 +29,7 @@ h1 {
     align-items: center;
     gap: 15px;
   }
-  background: linear-gradient(#D9D9D900 0%, #D9D9D900 50%, #D9D9D9FF 70%, #FBFBFBFF 100%), url("../../resources/image/Cover_0.jpg") no-repeat center center;
+  background: linear-gradient(#D9D9D900 0%, #D9D9D900 50%, #D9D9D9FF 70%, #FBFBFBFF 100%), url("../resources/image/Cover_0.jpg") no-repeat center center;
   background-size: cover;
   background-position: 50% 20%;
   height: 100vh;
