--- a/styles/style_main.css
+++ b/styles/style_main.css
@@ -287,6 +287,7 @@ span {
 	justify-content: space-between;
 	display: inline-flex;
 	gap: 10px;
+	margin: 15px;
 	width:100%;
 }
 .Account > .Line {
