--- a/styles/style_sub.css
+++ b/styles/style_sub.css
@@ -23,9 +23,9 @@
 	background: linear-gradient(#D9D9D900 0%, #D9D9D900 50%, #D9D9D9FF 70%, #FBFBFBFF 100%), url("../resources/image/Cover_0.jpg") no-repeat center center;
 	background-size: cover;
 	background-position: 50% 20%;
+  width:100%;
 	height: 100vh;
 	min-height: 480px;
-	margin:auto;
 	overflow-x: hidden;
 	overflow-y: hidden;
 }
