Use unsafe-end instead of flex-end (Test for samsung internet)
Signed-off-by: Eunki Hong <h.pichulia@gmail.com>

--- a/styles/style_sub.css
+++ b/styles/style_sub.css
@@ -16,7 +16,7 @@
 		height: 100%;
 		margin: auto;
 		flex-direction: column;
-		justify-content: flex-end;
+		justify-content: unsafe end;
 		align-items: center;
 		gap: 15px;
 	}
