--- a/styles/style_sub.css
+++ b/styles/style_sub.css
@@ -8,7 +8,7 @@
 			color: black; 
 			font-family: "Noto Serif KR";
 			font-weight: 400;
-			line-height: 22.50px;
+			line-height: 1.2rlh;
 			word-wrap: break-word;
 			display: inline-block;
 		}
@@ -16,9 +16,9 @@
 		height: 100%;
 		margin: auto;
 		flex-direction: column;
-		justify-content: unsafe end;
+		justify-content: flex-end;
 		align-items: center;
-		gap: 15px;
+		gap: 1rem;
 	}
 	background: linear-gradient(#D9D9D900 0%, #D9D9D900 50%, #D9D9D9FF 70%, #FBFBFBFF 100%), url("../resources/image/Cover_0.jpg") no-repeat center center;
 	background-size: cover;
@@ -164,7 +164,7 @@
 		top: 15px;
 		right: 35px;
 		color: #f1f1f1;
-		font-size: 40px;
+		font-size: 2.5rem;
 		font-weight: bold;
 		transition: 0.3s;
 	}
