--- a/styles/style_sub.css
+++ b/styles/style_sub.css
@@ -8,9 +8,9 @@ html {
 /* Page 1 */
 .Coverimage {
 	.Frame9 {
-		div {
+		.TitleText {
 			text-align: center;
-			color: black; 
+			color: black;
 			font-family: "Noto Serif KR";
 			font-weight: 400;
 			line-height: 1.2rlh;
@@ -136,7 +136,7 @@ html {
 		background-color: rgb(0,0,0); /* Fallback color */
 		background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
 	}
-	
+
 	/* Modal Content (image) */
 	.modal-content {
 		margin: auto;
@@ -144,25 +144,25 @@ html {
 		width: 80%;
 		max-width: 700px;
 	}
-	
+
 	/* Add Animation */
-	.modal-content, #caption {	
+	.modal-content, #caption {
 		-webkit-animation-name: zoom;
 		-webkit-animation-duration: 0.3s;
 		animation-name: zoom;
 		animation-duration: 0.3s;
 	}
-	
+
 	@-webkit-keyframes zoom {
-		from {-webkit-transform:scale(0)} 
+		from {-webkit-transform:scale(0)}
 		to {-webkit-transform:scale(1)}
 	}
-	
+
 	@keyframes zoom {
-		from {transform:scale(0)} 
+		from {transform:scale(0)}
 		to {transform:scale(1)}
 	}
-	
+
 /* The Close Button */
 .closeModal {
 		position: absolute;
@@ -173,14 +173,14 @@ html {
 		font-weight: bold;
 		transition: 0.3s;
 	}
-	
+
 	.closeModal:hover,
 	.closeModal:focus {
 		color: #bbb;
 		text-decoration: none;
 		cursor: pointer;
 	}
-	
+
 	/* 100% Image Width on Smaller Screens */
 	@media only screen and (max-width: 700px){
 		.modal-content {
