--- a/styles/style_main.css
+++ b/styles/style_main.css
@@ -66,7 +66,7 @@
 	margin: auto;
 }
 
-.page >	h1 {
+.page >	.titleText {
 	position: relative;
 	text-align: center;
 	color: black;
@@ -93,7 +93,7 @@
 	flex-direction: column;
 }
 
-.content-page >	h1 {
+.content-page >	.titleText {
 	position: relative;
 	text-align: center;
 	color: black;
