--- a/styles/style_sub.css
+++ b/styles/style_sub.css
@@ -127,66 +127,63 @@ html {
 
 /* The Modal (background) */
 .modal {
-		display: none; /* Hidden by default */
-		position: fixed; /* Stay in place */
-		z-index: 1; /* Sit on top */
-		padding-top: 100px; /* Location of the box */
-		left: 0;
-		top: 0;
-		width: 100%; /* Full width */
-		height: 100%; /* Full height */
-		overflow: auto; /* Enable scroll if needed */
-		background-color: rgb(0,0,0); /* Fallback color */
-		background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
-	}
+	display: none; /* Hidden by default */
+	position: fixed; /* Stay in place */
+	z-index: 1; /* Sit on top */
+	left: 0;
+	top: 0;
+	width: 100%; /* Full width */
+	height: 100%; /* Full height */
+	overflow: auto; /* Enable scroll if needed */
+	background-color: rgb(0,0,0); /* Fallback color */
+	background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+}
 
-	/* Modal Content (image) */
-	.modal-content {
-		margin: auto;
-		display: block;
-		width: 80%;
-		max-width: 700px;
-	}
+/* Modal Content (image) */
+.modal-content {
+	margin: auto;
+	display: block;
+	max-width: 700px;
+	object-fit: contain;
+	width: 90%;
+	height: 90%;
+}
 
-	/* Add Animation */
-	.modal-content, #caption {
-		-webkit-animation-name: zoom;
-		-webkit-animation-duration: 0.3s;
-		animation-name: zoom;
-		animation-duration: 0.3s;
-	}
+/* Add Animation */
+.modal-content, #caption {
+	-webkit-animation-name: zoom;
+	-webkit-animation-duration: 0.3s;
+	animation-name: zoom;
+	animation-duration: 0.3s;
+}
 
-	@-webkit-keyframes zoom {
-		from {-webkit-transform:scale(0)}
-		to {-webkit-transform:scale(1)}
-	}
+@-webkit-keyframes zoom {
+	from {-webkit-transform:scale(0)}
+	to {-webkit-transform:scale(1)}
+}
 
-	@keyframes zoom {
-		from {transform:scale(0)}
-		to {transform:scale(1)}
-	}
+@keyframes zoom {
+	from {transform:scale(0)}
+	to {transform:scale(1)}
+}
 
 /* The Close Button */
 .closeModal {
-		position: absolute;
-		top: 15px;
-		right: 35px;
-		color: #f1f1f1;
-		font-size: 2.5rem;
-		font-weight: bold;
-		transition: 0.3s;
-	}
+	position: absolute;
+	top: 15px;
+	right: 35px;
+	color: #f1f1f1;
+	font-size: 2.5rem;
+	font-weight: bold;
+	transition: 0.3s;
+}
 
-	.closeModal:hover,
-	.closeModal:focus {
-		color: #bbb;
-		text-decoration: none;
-		cursor: pointer;
-	}
-
-	/* 100% Image Width on Smaller Screens */
-	@media only screen and (max-width: 700px){
-		.modal-content {
-			width: 100%;
-		}
-	}
+.closeModal:hover,
+.closeModal:focus {
+	color: #bbb;
+	text-decoration: none;
+	cursor: pointer;
+}
