Disable button if some informations are not ready
Signed-off-by: Eunki Hong <h.pichulia@gmail.com>

--- a/styles/style_main.css
+++ b/styles/style_main.css
@@ -355,6 +355,13 @@ button.Button {
 		color: #FCFCFC;
 	}
 }
+.Button:disabled {
+	background: #E1E1E1;
+
+	.Text {
+		color: #FDFDFD;
+	}
+}
 
 /* Account button layout change */
 @media only screen and (max-width: 400px){
